added text class to show hide blocks

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -338,7 +338,7 @@
 
 <div class="container blog main">
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
     <pre><code class="python">
 def load_audio_metadata(csv_path: str,
             audio_dir: str,
@@ -461,7 +461,7 @@ def load_audio_metadata(csv_path: str,
 </div>
 <div class="container blog main">
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Pipeline Code
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Pipeline Code
     </summary>
     <pre><code class="python">
 # ------------------- optional preprocessing ------------------- #
@@ -1314,7 +1314,7 @@ label_counts.describe()
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code</summary>
     <pre><code class="python">
       # Viridis colors
       colors = px.colors.sample_colorscale('Viridis', np.linspace(0, 1, len(label_counts)))
@@ -1355,7 +1355,7 @@ label_counts.describe()
 </div>
 <div class="container blog main">
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code</summary>
     <pre><code class="python">
 # Make sure output directory exists
 output_dir = "participant_barplots"
@@ -1608,7 +1608,7 @@ df['Audio Length'].describe()
   <hr>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Spectrogram Plot Code
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Spectrogram Plot Code
     </summary>
     <pre><code class="python">
 def plot_unique_label_spectrograms_plotly(df, output_dir="spectrograms"):
@@ -1811,7 +1811,7 @@ plot_unique_label_spectrograms_plotly(df, output_dir="spectrograms")
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Feature Extraction Code
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Feature Extraction Code
     </summary>
     <pre><code class="python">
 # Get pitch variance as feature for audio projection
@@ -1914,7 +1914,7 @@ df = df.with_columns([
     on.</p>
 
     <details>
-      <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide 2D Projection Code
+      <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide 2D Projection Code
       </summary>
       <pre><code class="python">
   # Features for correlation heatmap
@@ -2092,7 +2092,7 @@ fig_tsne.write_html("tsne_projection.html")
     </details>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide 3D Projection Code
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide 3D Projection Code
     </summary>
     <pre><code class="python">
 features = ["PitchVar", "MFCC-1", "MFCC-2", "MFCC-3"]
@@ -2506,7 +2506,7 @@ save_3d_plot(X_tsne, labels, "3D t-SNE Projection of Audio Features", "tsne_3d.h
     </li>
   </ul>
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
     <pre><code class="python">
 def batch_pitch_extraction(audio_list: List,
                            max_samples_per_batch: int=50,
@@ -2635,7 +2635,7 @@ print(f"\n🎶 Pitch Variability Test completed in {time.time() - t0:.2f} second
   </ul>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Plot code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Plot code</summary>
     <pre><code class="python">
 def plot_plotly_spectrogram_comparison(df, label1="yes", label2="no", sr=SAMPLE_RATE, n_examples=4, output_dir="comparison_spectrograms"):
     """
@@ -2954,7 +2954,7 @@ plot_spectrogram_comparison(df, label1="yes", label2="no", sr=SAMPLE_RATE, n_exa
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full MFCC code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full MFCC code</summary>
     <pre><code class="python">
     def batch_mfcc_extraction(audio_list: List,
                                max_samples_per_batch: int=50,
@@ -3068,7 +3068,7 @@ plot_spectrogram_comparison(df, label1="yes", label2="no", sr=SAMPLE_RATE, n_exa
   <p style="font-family: 'Courier New', Courier, monospace;">🎛️ MFCC Significance Test completed in 0.44
     seconds<br><br></p>
     <details>
-      <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Plot code</summary>
+      <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Plot code</summary>
       <pre><code class="python">
 def box_and_heat_mfcc_comparison(df, labels=["yes", "no"], sr=22050, n_mfcc=3):
     # Step 1: Prepare data
@@ -3400,7 +3400,7 @@ box_and_heat_mfcc_comparison(df, labels=["yes", "no"], n_mfcc=3)
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Spectral Entropy
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Spectral Entropy
       Computation
       Code</summary>
     <pre><code class="python">
@@ -3422,7 +3422,7 @@ box_and_heat_mfcc_comparison(df, labels=["yes", "no"], n_mfcc=3)
       </code></pre>
   </details>
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide ANOVA Test Code</summary>
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide ANOVA Test Code</summary>
     <pre><code class="python">
   def spectral_entropy_anova_test(df, target_labels=["dysregulated", "hunger", "delighted"], max_samples_per_label=50):
       """Perform ANOVA on spectral entropy differences."""
@@ -3466,7 +3466,7 @@ box_and_heat_mfcc_comparison(df, labels=["yes", "no"], n_mfcc=3)
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Pairwise T-Test Code
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Pairwise T-Test Code
     </summary>
     <pre><code class="python">
   def pairwise_t_test(df, target_labels, feature="Spectral Entropy"):
@@ -3540,7 +3540,7 @@ box_and_heat_mfcc_comparison(df, labels=["yes", "no"], n_mfcc=3)
   <div class="container main blog">
 
     <details>
-  <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code
+  <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Plot Code
   </summary>
   <pre><code class="python">
 def plot_spectral_entropy_comparison(df, target_labels, feature="Spectral Entropy"):
@@ -3636,7 +3636,7 @@ def plot_spectral_entropy_comparison(df, target_labels, feature="Spectral Entrop
   </p>
 
   <details>
-    <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Synthetic Data Generation
+    <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Synthetic Data Generation
       Code</summary>
     </summary>
     <pre><code class="python">
@@ -4068,7 +4068,7 @@ print(f"Balanced data shape: {balanced_df.shape}")
   <p class="text">
     Ultimately, the K-Means analysis provided a diagnostic lens for evaluating feature space quality and informed later modeling decisions by exposing latent relationships between labels.
   </p>
-  <summary style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
+  <summary class="text" style="padding-top: 1em; font-family:Arial, Helvetica, sans-serif;"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Full Loading code</summary>
 <details>
   <pre><code class="python">
 def extract_mfccs(spec_data, n_mfccs=13):
@@ -4783,7 +4783,7 @@ print("="*50)
   </p>
 
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide SVM Feature Evaluation Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide SVM Feature Evaluation Code</summary>
     <pre><code>
 def evaluate_feature_importance(X_combined, labels, feature_names):
 
@@ -5028,7 +5028,7 @@ for i, (feature, kernel, accuracy) in enumerate(top_features):
   </p>
 
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide Performace Evaluation Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Performace Evaluation Code</summary>
     <pre>
       <code class="python">
 def plot_feature_performance(feature_performances, class_names):
@@ -5179,7 +5179,7 @@ def plot_feature_performance(feature_performances, class_names):
   </p>
 
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide Hierachal SVM Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Hierachal SVM Code</summary>
     <pre>
       <code class="python">
 def create_hierarchical_ensemble(X_scaled, labels):
@@ -5445,7 +5445,7 @@ print(f"Weighted Avg F1-Score: {ensemble_results['classification_report']['weigh
     making it well-suited for intent classification based on nonverbal vocalizations.
   </p>
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide Data Augmentation Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Data Augmentation Code</summary>
     <pre>
       <code class="python">
 def find_first_all_zero_columns(matrix):
@@ -5481,7 +5481,7 @@ filtered_df = truncate_spectrograms(df, set(valid))
   </details>
 
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide Create and Train CNN Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Create and Train CNN Code</summary>
     <pre>
       <code class="python">
 # 1. Define Dataset Class
@@ -5614,7 +5614,7 @@ def train_model(df, num_epochs=100, batch_size=32, learning_rate=0.001):
   </details>
 
   <details>
-    <summary><i class="fa-solid fa-code fa-flip"></i> Show/Hide Evaluate CNN Code</summary>
+    <summary class="text"><i class="fa-solid fa-code fa-flip"></i> Show/Hide Evaluate CNN Code</summary>
     <pre>
       <code class="python">
 # 4. Evaluation functions
