added model weights to gitignore

--- a/checkpoint3/website/clarity_elements.html
+++ b/checkpoint3/website/clarity_elements.html
@@ -3,15 +3,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Clarity: A Minimalist Website Template for AI Research</title>
+    <title>ML the Unspoken: CMSC320 Final Project</title>
     <meta name="description" content="We've presented Clarity, a minimalist and elegant website template for AI research.">
     <meta name="referrer" content="no-referrer-when-downgrade">
     <meta name="robots" content="all">
     <meta content="en_EN" property="og:locale">
     <meta content="website" property="og:type">
     <meta content="https://shikun.io/projects/clarity" property="og:url">
-    <meta content="Clarity" property="og:title">
-    <meta content="Website Template for AI Research" property="og:description">
+    <meta content="ML the Unspoken" property="og:title">
+    <meta content="CMSC320 Final Project" property="og:description">
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@your_twitter_id">
