--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -6484,7 +6484,7 @@ fig.write_html(os.path.join(output_dir, "vit_training_metrics.html"))
 </div>
 
 <div class="container blog main">
-  <h2>Conclusion</h2>
+  <h2><i class="fa-solid fa-puzzle-piece fa-bounce"></i> Conclusion</h2>
   <p class="text">With the power of friendship, we learned through machines in this project.</p>
   <p class="text">
     In this project, we built an end-to-end pipeline for classifying nonverbal vocalizations from autistic individuals using both classical and deep learning models. Starting from raw audio, we implemented a robust preprocessing workflow—including cleaning, normalization, and spectrogram generation—followed by exploratory data analysis to understand label distributions and feature dynamics. We evaluated multiple modeling strategies, from ensemble SVMs to CNNs and Vision Transformers (ViTs), the latter of which showed strong promise due to their ability to capture global time-frequency patterns through self-attention mechanisms. Despite label imbalance and data sparsity in some classes, our use of synthetic augmentation, class weighting, and careful hyperparameter tuning led to competitive performance across key intent categories. This project not only demonstrates the feasibility of using machine learning for assistive communication but also establishes a modular framework for future work in affective audio classification.
