change conclusion icon

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -6842,7 +6842,7 @@ fig.write_html(os.path.join(output_dir, "vit_training_metrics.html"))
 </div>
 
 <div class="container blog main">
-  <h1><i class="fa-solid fa-hourglass-end"></i> Conclusion</h1>
+  <h1><i class="fa-solid fa-puzzle-piece fa-bounce"></i> Conclusion</h1>
   <p class="text">With the <span class="animation">power of friendship</span>, we learned through machines in this
     project.</p>
   <div style="width: 40px; height: 40px;">
