changed cnn architecture

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -5570,7 +5570,7 @@ print(f"Weighted Avg F1-Score: {ensemble_results['classification_report']['weigh
 
 </div>
 
-<div class="container blog main gray large">
+<div class="container blog main large">
   <h3 style="text-align: center;">CNN Architecture</h3>
   <img src="clarity/images/cnn.png" alt="CNN Model Architecture">
 </div>
