--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -6869,6 +6869,74 @@ fig.write_html(os.path.join(output_dir, "vit_training_metrics.html"))
   </p>
 </div>
 
+<div class="container blog main gray">
+  <h2>References</h2>
+
+  
+  <ul>
+    <li>
+      <p class="text">
+        <a href="https://doi.org/10.5281/zenodo.5786860" target="_blank">ReCanvo Dataset</a>: The dataset used for our project — Johnson, K. T., Narain, J., Quatieri, T., et al. <em>“ReCANVo: A Database of Real-World Communicative and Affective Nonverbal Vocalizations.”</em> <i>Sci Data</i>, vol. 10, 2023, p. 523. https://doi.org/10.1038/s41597-023-02405-7.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://barrisambaris.medium.com/feature-engineering-in-speech-recognition-a-guide-into-selecting-relevant-audio-for-accurate-f383377126ea" target="_blank">
+          Feature Engineering in Speech Recognition
+        </a>: Methods for engineering relevant features in audio classification — Barris, Sambaris. <em>“Feature Engineering in Speech Recognition: A Guide into Selecting Relevant Audio for Accurate Predictions.”</em> <i>Medium</i>, 8 Jan. 2024.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://towardsdatascience.com/audio-deep-learning-made-simple-sound-classification-step-by-step-cebc936bbe5/" target="_blank">
+          Audio Deep Learning Made Simple
+        </a>: Overview of sound classification models and pipelines — Doshi, Ketan. <em>“Audio Deep Learning Made Simple: Sound Classification, Step-by-Step.”</em> <i>Towards Data Science</i>, 5 Mar. 2025.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://arxiv.org/html/2411.07186v1" target="_blank">NatureLM-audio</a>: Describes a foundation model for audio-language learning — Robinson, D., Miron, M., Hagiwara, M., & Pietquin, O. <em>“NatureLM-audio: An Audio-Language Foundation Model for Bioacoustics.”</em> arXiv, 2024. https://arxiv.org/abs/2411.07186.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="http://jmlr.org/papers/v9/vandermaaten08a.html" target="_blank">t-SNE Paper</a>: Dimensionality reduction technique widely used for visualization — van der Maaten, L., & Hinton, G. <em>“Visualizing Data Using t-SNE.”</em> <i>Journal of Machine Learning Research</i>, vol. 9, no. 86, 2008, pp. 2579–2605.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://arxiv.org/abs/1802.03426" target="_blank">UMAP Paper</a>: A scalable technique for non-linear dimensionality reduction — McInnes, L., Healy, J., & Melville, J. <em>“UMAP: Uniform Manifold Approximation and Projection for Dimension Reduction.”</em> arXiv, 2020.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://doi.org/10.1007/978-0-387-30164-8_425" target="_blank">K-Means Paper</a>: Clustering method description and applications — Jin, X., & Han, J. <em>“K-Means Clustering.”</em> In: Sammut, C., & Webb, G. I. (Eds.), <i>Encyclopedia of Machine Learning</i>, Springer, Boston, MA, 2011.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://machinelearningmastery.com/one-vs-rest-and-one-vs-one-for-multi-class-classification/" target="_blank">
+          Multi-Class SVM (One-vs-One)
+        </a>: Explanation of One-vs-One and One-vs-Rest strategies — Brownlee, J. <em>“One-vs-Rest and One-vs-One for Multi-Class Classification.”</em> <i>MachineLearningMastery.com</i>, 26 Apr. 2021.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://arxiv.org/abs/2007.11154" target="_blank">CNNs for Spectrograms</a>: CNN-based architecture for audio classification — Palanisamy, K., Singhania, D., & Yao, A. <em>“Rethinking CNN Models for Audio Classification.”</em> arXiv, 2020.
+      </p>
+    </li>
+    <li>
+      <p class="text">
+        <a href="https://arxiv.org/abs/2010.11929" target="_blank">Vision Transformers</a>: Foundational ViT model for image (and spectrogram) classification — Dosovitskiy, A., et al. <em>“An Image is Worth 16x16 Words: Transformers for Image Recognition at Scale.”</em> arXiv, 2021.
+      </p>
+    </li>
+  </ul>
+  </div>
+  
+</div>
+
+</div>
+
 <!-- Footer Page -->
 <footer>
   <div class="container">
