--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -6870,7 +6870,7 @@ fig.write_html(os.path.join(output_dir, "vit_training_metrics.html"))
 </div>
 
 <div class="container blog main gray">
-  <h2>References</h2>
+  <h2><i class="fa-solid fa-asterisk"></i> References</h2>
 
   
   <ul>
