updated broken detail block

--- a/checkpoint3/website/project_home.html
+++ b/checkpoint3/website/project_home.html
@@ -4162,9 +4162,9 @@ print(f"Balanced data shape: {balanced_df.shape}")
     Ultimately, the K-Means analysis provided a diagnostic lens for evaluating feature space quality and informed later
     modeling decisions by exposing latent relationships between labels.
   </p>
-  <summary><i class="fa-solid fa-code fa-flip"></i> <span style="font-weight: bold;">Show/Hide Full Loading Code</span>
-  </summary>
   <details>
+    <summary><i class="fa-solid fa-code fa-flip"></i> <span style="font-weight: bold;">Show/Hide Clustering Code</span>
+    </summary>
     <pre><code class="python">
 def extract_mfccs(spec_data, n_mfccs=13):
     mfccs = []
